# CaseForgeAzure

./: .funcignore  .gitignore  CLAUDE.md  Dockerfile.clinical-master  function_app.py  host.json  render.yaml  requirements.txt  test_api.py  test_local_direct.py
.venv-clinical/: pyvenv.cfg
app/: config.py  main.py  middleware.py  models.py
clinical_master/: .env.example  __init__.py  agent.py  config.py  pyproject.toml  recording.py  requirements.txt  server.py
clinical_master/agents/: __init__.py  feedback.py  patient.py
clinical_master/ai_agents/: __init__.py  feedback.py  patient.py
clinical_master/db/: __init__.py  session_repository.py  supabase_client.py
clinical_master/session/: __init__.py  manager.py  transcription_client.py
clinical_master/tests/: test_agent_tools.py  test_client.html  test_patient_prompt.py  test_recording.py  test_session_repository.py
clinical_master/tools/: __init__.py  examination.py  investigation.py
docs/: architecture_analysis.md  elevenlabs_architecture.md  elevenlabs_export.md  implementation_plan.md
migrations/: 0001_sca_session_results_rewrite.sql  0002_sca_stations_indicators.sql  0003_sca_trend_reports.sql  0004_clinical_sessions_error_status.sql  README.md
prompts/: ChatSetup.prompty  exp_group.prompty  gemini.prompty  generate_case_review.prompty
scripts/: author_indicators.py  deploy.py
tests/: test_author_indicators.py  test_feedback_schema.py  test_golden_calibration.py  test_marking_prompt.py  test_marking_service.py  test_model_call.py  test_no_dashes.py  test_normalize.py  test_portfolio_audit.py  (+3 more)
(+47 files in other folders)
