[project]
name = "clinical-master-agent"
version = "1.0.0"
description = "SCA Patient Consultation Simulator — LiveKit Voice Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[silero,turn-detector,google,deepgram,cartesia,openai]~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "google-genai",
    "supabase",
    "pydantic-settings",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
